option(Cabana_ENABLE_EXAMPLES "Build examples" OFF)
if(NOT Cabana_ENABLE_EXAMPLES)
  return()
endif()

find_package(PkgConfig)
find_package(MPI)
pkg_check_modules(SCAFACOS scafacos IMPORTED_TARGET)
if(PKG_CONFIG_FOUND AND SCAFACOS_FOUND)
  add_executable(ScafacosExample scafacos_example.cpp)
  target_link_libraries(ScafacosExample cabanacore PkgConfig::SCAFACOS ${MPI_C_LIBRARIES})
  target_include_directories(ScafacosExample PRIVATE ${MPI_C_INCLUDE_PATH})
endif()

add_subdirectory(benchmark)
add_subdirectory(tutorial)
